# DistributedMapping

./: CMakeLists.txt  README.md
KittiTool/data/1/: 0_optimized.g2o  0_optimizedEvo.txt  0_optimizedTUM.txt  1_optimizedEvo.txt  1_optimizedTUM.txt  2_optimizedEvo.txt  3.g2o  3_optimized.g2o  3_optimizedEvo.txt  3_optimizedTUM.txt  centralizedTwoStage_GN.g2o  initial.g2o  initialEvo.txt  trace_0.txt  trace_1.txt  trace_3.txt
KittiTool/data/first_crash/: 1_before.txt  1_optimized.g2o  1_optimizedTUM.txt  initial.g2o  trace_overall_error.txt
KittiTool/data/first_crash01/: 0.g2o  0_optimized.g2o  0_optimizedTUM.txt  1.g2o  1_optimized.txt  centralizedTwoStage.g2o  fullGraph_optimized.g2o  trace_0.txt  trace_1.txt  trace_centralizedRotation.txt
KittiTool/data/first_crash_test/: 0_optimized.g2o  0_optimized.txt  0_optimizedTUM.txt  1_optimized.g2o  1_optimized.txt  1_optimizedTUM.txt  centralizedTwoStage_GN.g2o  fullGraph_optimized.g2o
KittiTool/data/loop02/: 0.g2o  0_before.txt  0_optimized.g2o  0_optimized.txt  0_optimizedTUM.txt  1_before.txt  1_optimized.g2o  (+16 more)
KittiTool/include/: kitticlass.h
KittiTool/script/: g2oToKittiBlockWorld.sh  runDMbBlockWorld.sh
KittiTool/src/: g2otoKitti.cpp  kitticlass.cpp  sphere.cpp
admm-slam/cpp/: CMakeLists.txt
admm-slam/scripts/: 0_initial.g2o  runADMMOnBenchmarkData.sh
admm/cpp/: CMakeLists.txt
data/1/: 0.g2o  1.g2o  2.g2o  2_optimized.g2o  2_optimizedTUM.txt  centralizedTwoStage.g2o  fullGraph_optimized.g2o  trace_2.txt  trace_centralizedRotation.txt  trace_overall_error.txt
include/: kitticlass.h
src/: g2otoKitti.cpp  kitti.cpp  kitticlass.cpp  readG2OandNoise.cpp
(+140 files in other folders)
